used api to get data

--- a/todo_app_flutter_bloc/pubspec.yaml
+++ b/todo_app_flutter_bloc/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   bloc: ^8.1.4
   flutter_bloc: ^8.1.5
+  dio: ^5.4.2+1
 
 dev_dependencies:
   flutter_test:
